# adk-samples

python/agents/: requirements.txt
python/agents/image-scoring/: README.md  pyproject.toml
python/agents/image-scoring/deployment/: deploy.py
python/agents/image-scoring/eval/data/: test.json
python/agents/image-scoring/image_scoring/: agent.py  checker_agent.py  config.py  policy.json  prompt.py
python/agents/image-scoring/image_scoring/sub_agents/image/: imagen_agent.py
python/agents/image-scoring/image_scoring/sub_agents/image/tools/: image_generation_tool.py
python/agents/image-scoring/image_scoring/sub_agents/prompt/: prompt_agent.py
python/agents/image-scoring/image_scoring/sub_agents/scoring/: prompt.py  scoring_agent.py
python/agents/image-scoring/image_scoring/sub_agents/scoring/tools/: get_images_tool.py
python/agents/image-scoring/image_scoring/tools/: loop_condition_tool.py
